# lesson_3

./: CMakeLists.txt  game.cpp  game.h  lesson_3.aps  lesson_3.cpp  lesson_3.h  lesson_3.vcxproj  lesson_3.vcxproj.filters  main.cpp  main.h  util.cpp  util.h  winner.cpp  winner.h  winner_table.txt
.github/workflows/: main.yml
Debug/: lesson_3.obj.enc  vc142.idb
Debug/lesson_3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lesson_3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
